{
    "name": "MainKeys",
    "maps": [
        {
            "name": "Playing",
            "id": "ce623308-30e1-4f39-add3-81a5258cd791",
            "actions": [
                {
                    "name": "Line1",
                    "type": "Button",
                    "id": "8d78eb3f-a8c1-4655-b26f-72adb32dd7f8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Line2",
                    "type": "Button",
                    "id": "a1863012-3423-49eb-9d17-dbc92cf4f46b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Line3",
                    "type": "Button",
                    "id": "ae9049e6-712b-47b9-9b3f-88a721816d58",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Line4",
                    "type": "Button",
                    "id": "1385d743-d2cb-4daa-bdcc-7cb9bcefb9c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Line5",
                    "type": "Button",
                    "id": "e2bfe418-cda3-40b1-abd2-31b936f1dbaa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Line6",
                    "type": "Button",
                    "id": "c41a6345-81af-4074-8990-cd11899cb0dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Line8",
                    "type": "Button",
                    "id": "ca694f25-b923-4089-81de-bd2c9a9e3f5a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Line9",
                    "type": "Button",
                    "id": "146e6041-877a-4f7f-a3f7-7f831da807c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1ccd7eb3-8bd2-4246-8838-ebaec2add54d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Line1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ec6c389-86d3-424f-b988-88ad539c41e8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Line2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c706a43a-8c33-4ddd-bdde-a7af2f321e6d",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Line3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2599cc5f-e4e5-49bd-9453-2cbaebaf50e3",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Line4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46289f19-b53f-46de-b55a-eb484e2f30cc",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Line5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c31b628b-72de-42fa-8c56-55d3506951f6",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Line6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "715063bc-3910-4ed1-9a31-74954d2b7389",
                    "path": "<Keyboard>/slash",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Line6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6534b15-593b-404f-a1bf-9b5b1be12102",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Line8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "258b4c5a-1ab8-4ccf-bb08-d5d454666342",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Line9",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}